2000-11-25  James Henstridge  <james@daa.com.au>

	* app/disp_callbacks.c (ddisplay_drop_object): add a function to
	handle the tool drops on the canvas.

	* app/interface.c (display_data_received_callback): do the check
	to make sure that the drag is from a local toolbox here as well.

	* app/interface.c (create_tools): unref the pixmap/mask after
	creating the GtkPixmap.
	(tool_setup_drag_source): function to set up a drag source for
	create object tool buttons.
	(create_tools): setup drag source for CREATE_OBJECT_TOOL's.
	(fill_sheet_wbox): same here.
	(create_display_shell): set up the display canvas as a drag
	destination.
	(display_drop_callback, display_data_received_callback): functions
	to handle drops of tool buttons.

	* app/menus.c (menus_init): don't use gnome_popup_menu_new().  It
	does weird shit to the user_data pointer for a menu item.  Object
	alignment should work again now.

	* app/splash.c (get_logo_pixmap): don't unref the bitmap if it is
	NULL, and mark this function static.
	(app_splash_init): use gtk_widget_show_now() instead of the
	gtk_main_iteration loop.
	(app_splash_init): connecting gtk_widget_destroy to the destroy
	signal of a widget seems pretty useless.

2000-11-23  Kevin Breit <battery841@users.sourceforge.net>

	* doc/en/dia-manual.sgml:
		Added sect1 for advanced object types.  Starting development
                on that part.

2000-11-18  Kevin Breit <battery841@mediaone.net>

	* doc/en/dia-manual.sgml:
		Stupid spelling fixes.

2000-11-18  Kevin Breit <battery841@mediaone.net>

	* doc/en/dia-manual.sgml:
        	Just some small changes I made.  Props to Greg LeBlanc on the
                recommendations.

2000-11-17  Alexander Larsson  <alla@lysator.liu.se>

	* app/display.c:
	(ddisplay_add_display_area): Clip input rectangle to
	the visible part of the display.
	(ddisplay_scroll): Optimization, don't scroll and
	redraw if moving to the same position as before.

	* app/render_libart.c (renderer_libart_copy_to_window):